# dirc

./: .dockerignore  .gitlab-ci.yml  README.md  docker-compose.yaml
api/: .gitignore  Dockerfile  pom.xml
api/src/main/java/ie/dirc/api/: APIApplication.java  APIController.java  CrossOriginConfig.java  SampleController.java
api/src/test/java/ie/dirc/api/: SampleControllerTest.java
auth/: Cargo.toml  Dockerfile
auth/src/: db.rs  error.rs  lib.rs  main.rs
auth/tests/: authenticator_test.rs
chats/: Dockerfile  pom.xml
chats/src/main/java/ie/dirc/chats/: Chat.java  ChatEntity.java  ChatInfo.java  ChatInfoWithLatestMessage.java  ChatRepository.java  ChatsApplication.java  ChatsController.java  Message.java  MessageDTO.java
chats/src/main/resources/: application.properties
chats/src/test/java/ie/dirc/chats/: ChatsApplicationTests.java  (+1 more)
client/: .eslintrc.json  package.json  tailwind.config.js
client/src/api/: index.ts
client/src/api/types/: auth.ts  chat.ts
client/src/components/: Chat.tsx  ErrorSpan.tsx  Layout.tsx  Sidebar.tsx
client/src/context/: AuthContext.tsx
client/src/hooks/: useAuth.ts  useChat.ts  useWebsocket.ts
client/src/pages/: _app.tsx  _document.tsx  chats.tsx  index.tsx  login.tsx  register.tsx
client/src/pages/join/: [slug].tsx
client/src/styles/: globals.css
client/src/types/: chat.ts
core-rs/: Cargo.toml
core-rs/src/: error.rs  lib.rs
genesis/: pom.xml
live-chat/: Dockerfile  deno.jsonc
live-chat/src/: actions.ts  main.ts  server.ts  types.ts
users/: Cargo.toml  Dockerfile
users/src/: db.rs  lib.rs  main.rs
(+4 files in other folders)
