[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
derive_more = "0.99.17"
mime = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.4.0"
anyhow = "1.0.70"
futures = "0.3.28"
pbkdf2 = "0.12"
rand = "0.8.5"
sha2 = "0.10.6"
hex = "0.4"
