[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
mime = "0.3.17"
core-rs = { path = "../core-rs" }
actix-web-httpauth = "0.8.0"
mongodb = "2.4.0"
anyhow = "1.0.70"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.16", default-features = false, features = ["blocking", "json"] }
serde_json = "1.0.96"
